infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: roofstacks-sample
  annotations:
    cloud.google.com/backend-config: '{"default": "sample-app-config"}'
spec:
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: 80
